--- a/weather-app/angular.json
+++ b/weather-app/angular.json
@@ -37,8 +37,9 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.css",
+              "@angular/material/prebuilt-themes/azure-blue.css"
+
             ],
             "scripts": []
           },
