--- a/Angular/04-countryApiApp/angular.json
+++ b/Angular/04-countryApiApp/angular.json
@@ -37,6 +37,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -95,12 +96,4 @@
               }
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        }
-      }
-    }
-  }
-}
+              "@angular/material/prebuilt-themes
