--- a/Angular/04-countryApiApp/angular.json
+++ b/Angular/04-countryApiApp/angular.json
@@ -96,4 +96,13 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.css"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    }
+  }
+}
