--- a/Angular/04-countryApiApp/package.json
+++ b/Angular/04-countryApiApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-     "backend": "json-server --watch data/db.json",
+    "backend": "json-server --watch data/db.json",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -23,6 +23,7 @@
     "@angular/router": "^18.1.0",
     "@types/leaflet": "^1.9.12",
     "leaflet": "^1.9.4",
+    "primeflex": "^3.3.1",
     "react-icons": "^5.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
